--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -5,7 +5,6 @@
   z-index: 100;
   width: 100%;
   border-top: 6px solid $orange;
-  box-shadow: $box-shadow;
   font-family: $sans;
   color: $smokeyx;
   font-size: 15px;
@@ -15,9 +14,10 @@
     height: 76px;
     width: 100%;
     top: 0;
-    z-index: 97;
+    z-index: 1000;
     transition: $transition-all-fast;
     position: relative;
+    box-shadow: $box-shadow;
 
     @include respond(sm) {
       margin-top: 0;
