--- a/src/scss/layout/_super-header.scss
+++ b/src/scss/layout/_super-header.scss
@@ -1,6 +1,5 @@
 .utk-header-super {
   width: 100%;
-  box-shadow: inset $box-shadow;
   background-color: $gray-0;
   padding: $golden-ratio-2 0;
 
